Added API key, should not be seen in github Added the API key with .gitignore

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
             </button>
         </div>
         <div id="map"></div>
-    </div>      
+    </div>
+    <script src="config.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
