--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.css" rel="stylesheet">
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
 
     <script src="https://kit.fontawesome.com/48086dd54c.js" crossorigin="anonymous"></script>
 </head>
@@ -18,7 +21,7 @@
             <span class="toggle-icon"><i class="fas fa-chevron-right"></i></span>
           </button>          
         <div class="sidebar">
-            <h2>Pesulad</h2>
+            <h2>PESULAD</h2>
             <button id="sidebar-close">
                 <span class="toggle-icon"></span>
             </button>
